--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "company-summaries",
   "version": "1.0.0",
+  "homepage": "https://joshlicoding.github.io/Company-Report/",
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "dependencies": {
@@ -24,6 +25,8 @@
     "yahoo-stock-prices": "^1.1.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -43,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
